--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.1.0",
-    "@angular/common": "^16.1.0",
+    "@angular/common": "^16.2.12",
     "@angular/compiler": "^16.1.0",
     "@angular/core": "^16.1.0",
     "@angular/forms": "^16.1.0",
@@ -19,12 +19,14 @@
     "@angular/router": "^16.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.1",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.1.6",
     "@angular/cli": "~16.1.6",
     "@angular/compiler-cli": "^16.1.0",
+    "@types/uuid": "^9.0.7",
     "typescript": "~5.1.3"
   }
 }
